# dxvk-nvapi-module

./: README.md  build-wine32.txt  build-wine64.txt  meson.build  nvapi.c  nvapi64.spec
